notes: fix note text vertically overflowing note body.
Can happen when the translator intentionally sets a note body height
that's too small for the note and it causes the note text to overflow.

ref: https://danbooru.donmai.us/forum_topics/9127?page=301#forum_post_164787

--- a/app/javascript/src/styles/specific/notes.scss
+++ b/app/javascript/src/styles/specific/notes.scss
@@ -19,6 +19,7 @@
     padding: 4px;
     z-index: 150;
     overflow-wrap: break-word;
+    overflow-y: hidden;
   }
 
   div.note-body, div.note-box.embedded div.note-box-inner-border {
